--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,13 +1,35 @@
 {% extends 'base.html' %} {% block title %}
 Homepage - {{ block.super }} {% endblock title %}
 {% block content %}
-<header>
-    <h1>Hello Web App</h1>
-    <nav>
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
+<!-- <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img src="https://images.unsplash.com/photo-1496147195884-6ab7f7c0a027?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+            width="30" height="30" class="d-inline-block align-top" alt="">
+        Bootstrap
+    </a>
+</nav> -->
 
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{% url 'home' %}">
+        <img src="https://images.unsplash.com/photo-1496147195884-6ab7f7c0a027?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+            width="30" height="30" class="d-inline-block align-top" alt=""></a>Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            </li>
         </ul>
-    </nav>
-</header>
+    </div>
+</nav>
 {% endblock content %}
